@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-16T08:25:53Z",
+  "timestamp" : "2022-09-16T16:28:15Z",
   "count_outdated" : 2419,
   "uniques_outdated" : 592,
-  "count" : 2452,
+  "count" : 2451,
   "uniques" : 614,
   "clones" : [
     {
       "timestamp": "2022-09-02T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
