@@ -1,3 +1,11 @@
+2022-09-16T16:28:15Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3069308522
+* notice: last 14d: unq all: 11 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 592 2419 / 614 2452
+* notice: next accum: outdated-unq outdated-all / unq all: 592 2419 / 614 2451
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-09-02]
+
 2022-09-16T08:25:53Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3066440418
 * notice: last 14d: unq all: 11 33
